# hy340-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  not_implemented_error.cpp  not_implemented_error.h  readme.txt  scanner.l  std_lib_facilities.h  str_test.txt  test.txt  utilities.cpp  utilities.h
alpha_lex/: alpha_flex.l  alpha_lex.l  alpha_token.cpp  alpha_token.h  alpha_token_generator.cpp  alpha_token_generator.h  parser.y  scanner.h  scanner.l  utilities.cpp
alpha_lex/bonus/: DFA.cpp  DFA.h  analyzer.cpp  analyzer.h  main.cpp
common_interface/: Builtin_funcs.cpp  Builtin_funcs.h  Constants.h  Constants_pool.cpp  Constants_pool.h  arithm_ops.cpp  arithm_ops.h  utilities.h  vm_types.cpp  vm_types.h
common_interface/errors/: numeric_error.cpp  numeric_error.h
intermediate_code/: call_suffix.cpp  call_suffix.h  expr.cpp  expr.h  for_prefix.cpp  for_prefix.h  icode_generator.cpp  icode_generator.h  quad.cpp  quad.h  semantic_error.cpp  semantic_error.h  types.h
syntax_analyzer/: Func_handler.cpp  Func_handler.h  alpha_bison.output  hidden_var_handler.cpp  hidden_var_handler.h  loop_handler.cpp  loop_handler.h  parser.y  parser_manager.cpp  parser_manager.h  scope_handler.cpp  scope_handler.h  symbol_table.cpp  symbol_table.h  syntax_error.cpp  syntax_error.h  types.h
target_code/: Binary_writer.cpp  Binary_writer.h  VMcode_generator.cpp  VMcode_generator.h  generate_funcs.cpp  target_instruction.h  tcode_generator.cpp  tcode_generator.h  types.cpp  types.h
target_code/generate_funcs/: arithmetic.cpp  functions.cpp  helpers.cpp  misc.cpp  relational.cpp  tables.cpp
test_files/: comments.in  faq_2.in  num_test.in1  open_string.in
test_files_phase1/: string_err1.alpha  test_lex.alpha
test_files_phase1/ours/: faq_2.expected  general.in  invalid_esc_seq.in  open_block.in  string.in  unknown_token.in
test_files_phase2/: class.alpha  faq.alpha  formal_arguments_test.txt  funcdef_function_test.txt  function_test.txt  general.alpha  global_x_test.txt  local_x_test.txt  simple1.alpha  variable_x_test.txt
test_files_phase2/Errors/: Error1.asc
test_files_phase2/ours/: bug.alpha  class.alpha  formal_arguments_test.txt  funcdef_function_test.txt  function_test.txt  local_x_test.txt  open_nested.in  simple1.alpha  variable_x_test.txt
test_files_phase3/: 11for_loop.txt  12break-continue.txt  1func_decl.txt  2func_calls.txt  3save_expr2.txt  4create_table.txt  6arith_op.txt  7rel_op.txt  8bool_op.txt  9if.txt
test_files_phase3/ours/: 10while_loop.txt  11for_loop.txt  13break-continue-2.txt  14not_logical_op.txt  15const.txt  1func_decl.txt  2save_expr.txt  5unary_op.txt  6arith_op.txt  7rel_op.txt  9if.txt
test_files_phase3/theirs/: p3t_const_maths.asc  p3t_flow_control.asc  p3t_relational.asc
test_files_phase45/: a.abc  arithm.alpha  libfuncs.alpha  method_calls.txt  relational.alpha  run.sh  test.alpha  test.alpha.abc  test1simple.alpha  test_dynamic_tables.alpha  userfunc.alpha  variables.alpha
test_files_phase45/flow_control/: test_2_while.txt  test_break_continue.txt  test_for_loop.txt  test_if_else.txt  test_while.txt
virtual_machine/: binary.abc  main.cpp  rdp.cpp  rdp.h
virtual_machine/AVM/: AVM.cpp  AVM.h  Constants_pool.cpp  Constants_pool.h  Memcell.cpp  Memcell.h  Program_stack.cpp  Program_stack.h  Table.cpp  Table.h
virtual_machine/AVM/Program_stack/: Program_stack.cpp  Program_stack.h  Stack_manipulator.cpp  Stack_manipulator.h
virtual_machine/AVM/builtin_funcs/: functions.cpp  math.cpp  misc.cpp  tables.cpp
virtual_machine/AVM/dispatcher/: arithmetic.cpp  functions.cpp  misc.cpp  relational.cpp  tables.cpp
virtual_machine/AVM/errors/: alpha_runtime_error.cpp  alpha_runtime_error.h  internal_error.cpp  internal_error.h  stack_overflow_error.cpp  stack_overflow_error.h
virtual_machine/RDP/: Lookahead.cpp  RDP.cpp  RDP.h  Token.cpp  Token.h
